SERVER-35479 Make $collStats count behavior have "standard" error code and consistent behavior across topologies