jstests/aggregation/sources/collStats/count.js
@@ -57,15 +57,11 @@ assert.eq(0, result.count);
 
 // Test that we error when the collection does not exist.
 coll.drop();
-assertErrorCode(coll, pipeline, 40481);
+assertErrorCode(coll, pipeline, ErrorCodes.NamespaceNotFound);
 
 // Test that we error when the database does not exist.
 // TODO SERVER-35479 When running against a mongos, a non-existent database will cause all
 // aggregations to return an empty result set.
 assert.commandWorked(testDB.dropDatabase());
-if (FixtureHelpers.isMongos(testDB)) {
-    assert.eq([], coll.aggregate(pipeline).toArray());
-} else {
-    assertErrorCode(coll, pipeline, 40481);
-}
+assertErrorCode(coll, pipeline, ErrorCodes.NamespaceNotFound);
 }());
